<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/btnMenuUnhide"
        android:layout_above="@+id/btnMenuUnhide"
        android:layout_marginBottom="30dp"
        android:id="@+id/btnMenuHide"
        android:text="@string/btnMenuHide"
        android:textSize="30sp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/btnMenuUnhide"
        android:text="@string/btnMenuUnhide"
        android:textSize="30sp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/btnMenuUnhide"
        android:layout_below="@+id/btnMenuUnhide"
        android:layout_marginTop="30dp"
        android:id="@+id/btnMenuStat"
        android:text="@string/btnMenuStat"
        android:textSize="30sp"/>
</RelativeLayout>